--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ title: Home
   {% endif %}
 
   {% if paginator.next_page %}
-    <a href="/page{{paginator.next_page}}" class="next ">Older Posts</a>
+    <a href="/page{{paginator.next_page}}" class="next">Older Posts</a>
   {% endif %}
+  <div class="clear"></div>
 </div>
